# PyOctal

./: .gitignore  816xB  IL_remote_demo.py  LICENSE.txt  README.md  Thumbs.db  __init__.py  instr.py  instr_main.py  interface.py  main.py  plot.py  plot_main.py  pyproject.toml  requirement.txt  requirements.txt  sweep_main.py  test.py  venv_setup.py
.github/: workflows
.github/workflows/: python.yaml  test.yaml
analysis/: csv_operations.py  learn_pandas.py  passive.py
analysis/data/: test.csv
config/: README.md  dc_config.yaml  instr_config.yaml  iv_config.yaml  passive_config.yaml  plot_config.yaml
configs/: README.md  instr_config.yaml  iv_config.yaml  passive_config.yaml  plot_config.yaml  sweep_config.yaml
lib/: README.md  __init__.py  analysis.py  base.py  csv_operations.py  dc_supply.py  error.py  info.py  metadata.py  multimeter.py  sweeps.py  util.py
lib/analysis/: iloss.py  plt.py
lib/instruments/: README.md  __init__.py  agilent8163B.py  agilentDSO8000.py  agilentE3640.py  agilentE3640A.py  agilentE364X.py  ametekDSP7230.py  ametekDSP7265.py  ametekDSP72XX.py  arroyo6301.py  base.py  daylightQCL.py  dc_supply.py  dummy.py  exfoXTA50.py  keithley2400.py  keithley6487.py  keysight86100D.py  keysightE8257D.py  keysightE8258D.py  keysightPAS.py  multimeter.py  pal.py  pas.py  power_supply.py  tektronixAPT.py  tektronixScope.py  thorlabsAPT.py  thorlabsITC40XX.py  thorlabsPM100.py  thorlabsQCL.py  ttiTGF3162.py
lib/sweeps/: __init__.py  ac.py  dc.py  iloss.py  info.py  iv.py  passive.py
lib/util/: __init__.py  csv_operations.py  file_operations.py  formatter.py  logger.py  plot.py  realtime_plot.py  util.py
octal/: base.py
octal/instruments/: README.md  agilent8163B.py  agilentDSO8000.py  agilentE3640.py  arroyo6301.py  daylightQCL.py  exfoXTA50.py  keithley2400.py  keysight86100D.py  keysightE8257D.py  keysightPAS.py  tektronixScope.py  thorlabsAPT.py  thorlabsITC40XX.py  thorlabsPM100.py
octal/octal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
octal/sweeps/: ac.py  info.py  passive.py
octal/util/: __init__.py
pyoctal/: README.md  base.py  error.py  info.py
pyoctal/instruments/: README.md  __init__.py  agilent8163B.py  agilent816xB.py  agilentDSO8000.py  agilentE3640.py  agilentN777xC.py  ametekDSP72XX.py  arroyo6301.py  base.py  daylightQCL.py  exfoXTA50.py  fiberlabsAMP.py  keithley2400.py  keithley6487.py  keysight86100D.py  keysightE8257D.py  keysightPAS.py  tektronixScope.py  thorlabsAPT.py  thorlabsITC40XX.py  thorlabsPM100.py  ttiTGF3162.py  xpow.py
pyoctal/sweeps/: __init__.py  ac.py  amp.py  dc.py  info.py  iv.py  passive.py  pulse.py
pyoctal/util/: file_operations.py  formatter.py  plot.py  util.py
pyoctal/utils/: __init__.py  error.py  file_operations.py  formatter.py  util.py
results/KTN_3/: iloss_coeffs.csv  iloss_data.csv  iloss_info.csv  iloss_lambda.csv
results/XXX/: data.csv  (+4 more)
tests/: excel.xlsx  sim_dev.yaml  sweeps.py  test_file_op.py  test_instruments.py  test_plots.py  test_sim.py  test_util.py
tools/: __init__.py  instr.py  instr_main.py  plot_main.py  sweep_main.py
xxx/: 0A.xlsx  1040A.xlsx  1045A.xlsx  1050A.xlsx  1055A.xlsx  1060A.xlsx  1065A.xlsx  1070A.xlsx  1075A.xlsx  10A.xlsx  15A.xlsx  1A.xlsx  20A.xlsx  25A.xlsx  30A.xlsx  35A.xlsx  40A.xlsx  45A.xlsx  5A.xlsx
(+23 files in other folders)
